# cpp_starter_project

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  cleanup.sh  doxygen.conf
src/: CMakeLists.txt  main.cpp  my_math.cpp  my_math.h
src/myproject/: Singleton.h  math.cpp  math.h  my_math.cpp  my_math.h
src/ui/: ui.cpp  ui.h
test/: CMakeLists.txt  tests1.cpp
